# SkillForge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  动态UI技术方案调研及评估
.claude/: launch.json
.cursor/rules/: research-driven-dev.mdc  session-governor.mdc
.github/: release.yml
.github/workflows/: build-release.yml  deploy-website.yml  release-announce.yml
project-harness/: README.md
project-harness/context/: current-state.md  openclaw-research.md  project-brief.md  references.md  working-draft.md
project-harness/docs/: v1-product-tech-spec.md  v1.1-product-tech-spec.md
project-harness/evidence/: demo-05-alignment-checklist.md  demo-05-behavior-spec.md  project-history.md  skill-structure-analysis.md
project-harness/workflow/: active-task.md  backlog.md  v1.1-unified-batches.md
public/demos/: 01-editor-preview-mapping.html  02-three-approaches.html  03-fusion.html  04-panel-alignment.html  05-complete.html  06-inline-edit.html
src/: App.tsx  demo-linking.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  ssh.rs
src/components/: empty-state.tsx  error-boundary.tsx  workspace-shell.tsx
src/data/: skill-loader.ts
src/hooks/: use-panel-sync.ts  use-theme.ts  use-workspace.ts
src/i18n/: index.ts
src/lib/: app-config.ts  bridge-relations.ts  bridge-sections.ts  clawhub-api.ts  download.ts  github-api.ts  markdown-engine.ts  (+7 more)
website/: astro.config.mjs  capture-screenshots.mjs  generate-og-image.mjs  package-lock.json  package.json
(+140 files in other folders)
