[package]
name = "skillforge"
version = "1.1.0"
description = "SkillForge — OpenClaw Skill 可视化配置工具"
authors = ["Jason"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
